-- ============================================
-- Tradalyst — Database Schema
-- Generated from PostgreSQL production database
-- Database version: PostgreSQL 16.13
-- Date: 2026-05-08
-- ============================================

-- ── users ─────────────────────────────────────────────────────────────────────

CREATE TABLE public.users_customuser (
    id                   bigint                   NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    password             character varying(128)   NOT NULL,
    last_login           timestamp with time zone,
    is_superuser         boolean                  NOT NULL,
    email                character varying(254)   NOT NULL,
    display_name         character varying(100)   NOT NULL,
    bio                  text                     NOT NULL,
    role                 character varying(10)    NOT NULL,  -- 'trader' | 'mentor' | 'admin'
    is_active            boolean                  NOT NULL,
    is_staff             boolean                  NOT NULL,
    date_joined          timestamp with time zone NOT NULL,
    onboarding_completed boolean                  NOT NULL,
    plan                 character varying(4)     NOT NULL,  -- 'free' | 'pro'
    theme_preference     character varying(5)     NOT NULL,  -- 'light' | 'dark'
    trial_ends_at        timestamp with time zone,
    language_preference  character varying(2)     NOT NULL,  -- 'es' | 'en'
    pinned_assets        jsonb                    NOT NULL,
    stripe_customer_id   character varying(100)   NOT NULL,
    CONSTRAINT users_customuser_pkey PRIMARY KEY (id),
    CONSTRAINT users_customuser_email_key UNIQUE (email)
);

CREATE INDEX users_customuser_email_6445acef_like
    ON public.users_customuser USING btree (email varchar_pattern_ops);

-- Django M2M permission helpers (auto-managed by Django)
CREATE TABLE public.users_customuser_groups (
    id            bigint  NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    customuser_id bigint  NOT NULL,
    group_id      integer NOT NULL,
    CONSTRAINT users_customuser_groups_pkey PRIMARY KEY (id),
    CONSTRAINT users_customuser_groups_customuser_id_group_id_76b619e3_uniq UNIQUE (customuser_id, group_id),
    CONSTRAINT users_customuser_gro_customuser_id_958147bf_fk_users_cus
        FOREIGN KEY (customuser_id) REFERENCES public.users_customuser(id) DEFERRABLE INITIALLY DEFERRED,
    CONSTRAINT users_customuser_groups_group_id_01390b14_fk_auth_group_id
        FOREIGN KEY (group_id) REFERENCES public.auth_group(id) DEFERRABLE INITIALLY DEFERRED
);

CREATE INDEX users_customuser_groups_customuser_id_958147bf
    ON public.users_customuser_groups USING btree (customuser_id);
CREATE INDEX users_customuser_groups_group_id_01390b14
    ON public.users_customuser_groups USING btree (group_id);

CREATE TABLE public.users_customuser_user_permissions (
    id            bigint  NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    customuser_id bigint  NOT NULL,
    permission_id integer NOT NULL,
    CONSTRAINT users_customuser_user_permissions_pkey PRIMARY KEY (id),
    CONSTRAINT users_customuser_user_pe_customuser_id_permission_7a7debf6_uniq UNIQUE (customuser_id, permission_id),
    CONSTRAINT users_customuser_use_customuser_id_5771478b_fk_users_cus
        FOREIGN KEY (customuser_id) REFERENCES public.users_customuser(id) DEFERRABLE INITIALLY DEFERRED,
    CONSTRAINT users_customuser_use_permission_id_baaa2f74_fk_auth_perm
        FOREIGN KEY (permission_id) REFERENCES public.auth_permission(id) DEFERRABLE INITIALLY DEFERRED
);

CREATE INDEX users_customuser_user_permissions_customuser_id_5771478b
    ON public.users_customuser_user_permissions USING btree (customuser_id);
CREATE INDEX users_customuser_user_permissions_permission_id_baaa2f74
    ON public.users_customuser_user_permissions USING btree (permission_id);


-- ── trades ────────────────────────────────────────────────────────────────────

CREATE TABLE public.trades_trade (
    id                bigint                   NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    pair              character varying(20)    NOT NULL,
    direction         character varying(5)     NOT NULL,  -- 'long' | 'short'
    entry_price       numeric(20,8)            NOT NULL,
    exit_price        numeric(20,8),
    quantity          numeric(20,8)            NOT NULL,
    entry_time        timestamp with time zone NOT NULL,
    exit_time         timestamp with time zone,
    pnl               numeric(20,8),
    risk_reward_ratio numeric(10,4),
    result            character varying(10)    NOT NULL,  -- 'win' | 'loss' | 'breakeven'
    emotion           character varying(10)    NOT NULL,  -- 'calm' | 'confident' | 'fearful' | 'greedy' | 'anxious' | 'fomo' | 'revenge' | 'neutral'
    notes             text                     NOT NULL,
    created_at        timestamp with time zone NOT NULL,
    updated_at        timestamp with time zone NOT NULL,
    user_id           bigint                   NOT NULL,
    CONSTRAINT trades_trade_pkey PRIMARY KEY (id),
    CONSTRAINT trades_trade_user_id_4ce65fb7_fk_users_customuser_id
        FOREIGN KEY (user_id) REFERENCES public.users_customuser(id) DEFERRABLE INITIALLY DEFERRED
);

CREATE INDEX trades_trade_user_id_4ce65fb7
    ON public.trades_trade USING btree (user_id);


-- ── analysis ──────────────────────────────────────────────────────────────────

CREATE TABLE public.analysis_aiinsight (
    id           bigint                   NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    content      text                     NOT NULL,
    period_start date                     NOT NULL,
    period_end   date                     NOT NULL,
    trade_count  integer                  NOT NULL,
    created_at   timestamp with time zone NOT NULL,
    user_id      bigint                   NOT NULL,
    CONSTRAINT analysis_aiinsight_pkey PRIMARY KEY (id),
    CONSTRAINT analysis_aiinsight_trade_count_check CHECK (trade_count >= 0),
    CONSTRAINT analysis_aiinsight_user_id_19b41daf_fk_users_customuser_id
        FOREIGN KEY (user_id) REFERENCES public.users_customuser(id) DEFERRABLE INITIALLY DEFERRED
);

CREATE INDEX analysis_aiinsight_user_id_19b41daf
    ON public.analysis_aiinsight USING btree (user_id);

CREATE TABLE public.analysis_chatmessage (
    id         bigint                   NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    role       character varying(10)    NOT NULL,  -- 'user' | 'assistant'
    content    text                     NOT NULL,
    created_at timestamp with time zone NOT NULL,
    user_id    bigint                   NOT NULL,
    CONSTRAINT analysis_chatmessage_pkey PRIMARY KEY (id),
    CONSTRAINT analysis_chatmessage_user_id_23fa0699_fk_users_customuser_id
        FOREIGN KEY (user_id) REFERENCES public.users_customuser(id) DEFERRABLE INITIALLY DEFERRED
);

CREATE INDEX analysis_chatmessage_user_id_23fa0699
    ON public.analysis_chatmessage USING btree (user_id);


-- ── mentors ───────────────────────────────────────────────────────────────────

CREATE TABLE public.mentors_mentorrequest (
    id         bigint                   NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    status     character varying(10)    NOT NULL,  -- 'pending' | 'accepted' | 'rejected'
    created_at timestamp with time zone NOT NULL,
    updated_at timestamp with time zone NOT NULL,
    mentor_id  bigint                   NOT NULL,
    trader_id  bigint                   NOT NULL,
    CONSTRAINT mentors_mentorrequest_pkey PRIMARY KEY (id),
    CONSTRAINT mentors_mentorrequest_mentor_id_trader_id_a923b283_uniq UNIQUE (mentor_id, trader_id),
    CONSTRAINT mentors_mentorrequest_mentor_id_00b8df0e_fk_users_customuser_id
        FOREIGN KEY (mentor_id) REFERENCES public.users_customuser(id) DEFERRABLE INITIALLY DEFERRED,
    CONSTRAINT mentors_mentorrequest_trader_id_f4172170_fk_users_customuser_id
        FOREIGN KEY (trader_id) REFERENCES public.users_customuser(id) DEFERRABLE INITIALLY DEFERRED
);

CREATE INDEX mentors_mentorrequest_mentor_id_00b8df0e
    ON public.mentors_mentorrequest USING btree (mentor_id);
CREATE INDEX mentors_mentorrequest_trader_id_f4172170
    ON public.mentors_mentorrequest USING btree (trader_id);

CREATE TABLE public.mentors_mentorassignment (
    id         bigint                   NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    created_at timestamp with time zone NOT NULL,
    is_active  boolean                  NOT NULL,
    mentor_id  bigint                   NOT NULL,
    trader_id  bigint                   NOT NULL,
    CONSTRAINT mentors_mentorassignment_pkey PRIMARY KEY (id),
    CONSTRAINT mentors_mentorassignment_trader_id_mentor_id_33bdefd0_uniq UNIQUE (trader_id, mentor_id),
    CONSTRAINT mentors_mentorassign_mentor_id_f8e235df_fk_users_cus
        FOREIGN KEY (mentor_id) REFERENCES public.users_customuser(id) DEFERRABLE INITIALLY DEFERRED,
    CONSTRAINT mentors_mentorassign_trader_id_c26097d1_fk_users_cus
        FOREIGN KEY (trader_id) REFERENCES public.users_customuser(id) DEFERRABLE INITIALLY DEFERRED
);

CREATE INDEX mentors_mentorassignment_mentor_id_f8e235df
    ON public.mentors_mentorassignment USING btree (mentor_id);
CREATE INDEX mentors_mentorassignment_trader_id_c26097d1
    ON public.mentors_mentorassignment USING btree (trader_id);

CREATE TABLE public.mentors_mentorannotation (
    id         bigint                   NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    body       text                     NOT NULL,
    created_at timestamp with time zone NOT NULL,
    updated_at timestamp with time zone NOT NULL,
    mentor_id  bigint                   NOT NULL,
    trade_id   bigint                   NOT NULL,
    CONSTRAINT mentors_mentorannotation_pkey PRIMARY KEY (id),
    CONSTRAINT mentors_mentorannota_mentor_id_fba92eaf_fk_users_cus
        FOREIGN KEY (mentor_id) REFERENCES public.users_customuser(id) DEFERRABLE INITIALLY DEFERRED,
    CONSTRAINT mentors_mentorannotation_trade_id_38a87c68_fk_trades_trade_id
        FOREIGN KEY (trade_id) REFERENCES public.trades_trade(id) DEFERRABLE INITIALLY DEFERRED
);

CREATE INDEX mentors_mentorannotation_mentor_id_fba92eaf
    ON public.mentors_mentorannotation USING btree (mentor_id);
CREATE INDEX mentors_mentorannotation_trade_id_38a87c68
    ON public.mentors_mentorannotation USING btree (trade_id);


-- ── simplejwt token blacklist ─────────────────────────────────────────────────

CREATE TABLE public.token_blacklist_outstandingtoken (
    id         bigint                   NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    token      text                     NOT NULL,
    created_at timestamp with time zone,
    expires_at timestamp with time zone NOT NULL,
    user_id    bigint,
    jti        character varying(255)   NOT NULL,
    CONSTRAINT token_blacklist_outstandingtoken_pkey PRIMARY KEY (id),
    CONSTRAINT token_blacklist_outstandingtoken_jti_hex_d9bdf6f7_uniq UNIQUE (jti),
    CONSTRAINT token_blacklist_outs_user_id_83bc629a_fk_users_cus
        FOREIGN KEY (user_id) REFERENCES public.users_customuser(id) DEFERRABLE INITIALLY DEFERRED
);

CREATE INDEX token_blacklist_outstandingtoken_jti_hex_d9bdf6f7_like
    ON public.token_blacklist_outstandingtoken USING btree (jti varchar_pattern_ops);
CREATE INDEX token_blacklist_outstandingtoken_user_id_83bc629a
    ON public.token_blacklist_outstandingtoken USING btree (user_id);

CREATE TABLE public.token_blacklist_blacklistedtoken (
    id             bigint                   NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    blacklisted_at timestamp with time zone NOT NULL,
    token_id       bigint                   NOT NULL,
    CONSTRAINT token_blacklist_blacklistedtoken_pkey PRIMARY KEY (id),
    CONSTRAINT token_blacklist_blacklistedtoken_token_id_key UNIQUE (token_id),
    CONSTRAINT token_blacklist_blacklistedtoken_token_id_3cc7fe56_fk
        FOREIGN KEY (token_id) REFERENCES public.token_blacklist_outstandingtoken(id) DEFERRABLE INITIALLY DEFERRED
);
